# ai-fast-demos

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/routers/: chat.py  image_classify.py
experiments/: Research Summary.ipynb
experiments/observations/: EDA-Copy1.ipynb  EDA.ipynb  Inference.ipynb  resnet18_0-Copy1.ipynb  resnet18_0.ipynb
streamlit/image/: image_classify_app.py
streamlit/text/: fastapi_chat_app.py  simple_chat_app.py
tests/app/: test_main.py
tests/app/core/api/: test_main.py
