[tool.poetry]
name = "ai-fast-demos"
version = "0.1.0"
description = ""
authors = ["Blake Danson <blakedanson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.40.0"
openai = "^1.54.3"
langchain = "^0.3.7"
langchain-openai = "^0.2.6"
fastapi = {extras = ["standard"], version = "^0.115.4"}
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
