[tool.poetry]
name = "ai-fast-demos"
version = "0.1.0"
description = ""
authors = ["Blake Danson <blakedanson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.40.0"
openai = "^1.54.3"
langchain-openai = "^0.2.6"
fastapi = {extras = ["standard"], version = "^0.115.4"}
pytest = "^8.3.3"
ipykernel = "^6.29.5"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
